# synthetic-user-profile

./: .env-template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
experiments/: infer.py  models.py  profile.py  profiles.json  result.txt
infrastructure/: README.md  main.tf  provider.tf  terraform.tfvars.sample
synthetic_user_profile/: hosting.py
synthetic_user_profile/protocols/: i_azure_openai_service.py
synthetic_user_profile/services/: azure_openai_service.py
tests/synthetic_user_profile/services/: test_azure_openai_service.py
